--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -80,7 +80,7 @@
       {
         "translation_key": "open_hours.week_day5",
         "from": "8:00",
-        "to": "18:00",
+        "to": "23:00",
         "description": "friday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -89,7 +89,7 @@
       {
         "translation_key": "open_hours.week_day6",
         "from": "8:00",
-        "to": "18:00",
+        "to": "23:00",
         "description": "saturday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -136,7 +136,7 @@
     "description": "System of units which measures the distance to the branch. Can be metric (km or m), imperial (mi), auto (depending on the browser locale)"
   },
   "customer_data": {
-    "value": "disable",
+    "value": "enable",
     "description": "Enable or disable customer access to enter customer phone number using mobile ticket UI, 'on = enable', 'off = disable'"
   },
   "privacy_policy": {
@@ -152,8 +152,8 @@
     "description": "URL of privacy policy information starting with http:// or https://. If value is null privacy policy information will get from the property file."
   },
   "country_code": {
-    "value": "",
-    "description": "Define the country code for phone number. If value is null no country code will be added."
+    "value": "lk",
+    "description": "Define the country code for phone number. If value is null no country code will be added. Can be either 'ISO alpha-2 format' or 'International phone number format'. Country code will be separated if any nonnumerical code is defined."
   },
   "queue_poll_retry": {
     "value": "1",
@@ -164,7 +164,7 @@
     "description": "Enable or disable whether user allow to use/open the ticket in other devices apart from the created device. 'on = enable', 'off = disable'"
   },
   "otp_service": {
-    "value": "disable",
+    "value": "enable",
     "description": "Enable or disable OTP service"
   },
   "create_ticket_token": {
