--- a/node/mt-service/src/config/config.json
+++ b/node/mt-service/src/config/config.json
@@ -1,10 +1,10 @@
 {
   "db_connection_string": {
-    "value": "",
+    "value": "mongodb://localhost:27017/qmatic",
     "description": "mongo database connection URL, eg: mongodb://[username]:[password]@[host]:[port]/[database][?options]"
   },
   "tenant_id": {
-    "value": "",
+    "value": "1",
     "description": "unique identifier of the client application. e.g: b14f3c08,client-0001"
   }
 }
