--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "grunt-cli": "^1.2.0",
     "hide-powered-by": "^1.1.0",
     "imagemin-optipng": "^5.2.1",
+    "intl-tel-input": "^17.0.11",
     "ng2-bootstrap": "^1.1.16",
+    "ng2-tel-input": "^2.3.0",
     "ng2-translate": "^5.0.0",
     "nocache": "^2.1.0",
     "rxjs": "^5.1.0",
