--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.2.6",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.2.6",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
     "dont-sniff-mimetype": "^1.1.0",
     "express-http-proxy": "^1.6.0",
@@ -35,14 +36,14 @@
     "ng2-tel-input": "^2.3.0",
     "ng2-translate": "^5.0.0",
     "nocache": "^2.1.0",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.5.2",
     "ws": "^1.1.1",
     "x-xss-protection": "^2.0.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.7.3",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^4.0.0",
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
@@ -108,7 +109,7 @@
     "systemjs-builder": "^0.15.16",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
+    "typescript": "^2.4.2",
     "webdriver-manager": "10.2.5"
   }
 }
