MOB-309: updated version to version 11

--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/platform-server": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "core-js": "^2.4.1",
+    "@angular/animations": "^11.2.3",
+    "@angular/common": "^11.2.3",
+    "@angular/compiler": "^11.2.3",
+    "@angular/core": "^11.2.3",
+    "@angular/forms": "^11.2.3",
+    "@angular/platform-browser": "^11.2.3",
+    "@angular/platform-browser-dynamic": "^11.2.3",
+    "@angular/platform-server": "^11.2.3",
+    "@angular/router": "^11.2.3",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "core-js": "^2.5.0",
     "dont-sniff-mimetype": "^1.1.0",
     "express-http-proxy": "^1.6.0",
     "express-static-gzip": "^2.0.8",
@@ -32,28 +33,31 @@
     "hide-powered-by": "^1.1.0",
     "imagemin-optipng": "^5.2.1",
     "intl-tel-input": "^17.0.11",
+    "lodash-es": "^4.17.21",
     "ng2-bootstrap": "^1.1.16",
     "ng2-tel-input": "^2.3.0",
-    "ng2-translate": "^5.0.0",
     "nocache": "^2.1.0",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.6.6",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "tslib": "^2.0.0",
     "ws": "^1.1.1",
     "x-xss-protection": "^2.0.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.3",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^4.0.0",
+    "@angular-devkit/build-angular": "~0.1102.2",
+    "@angular/cli": "^11.2.2",
+    "@angular/compiler-cli": "^11.2.3",
+    "@angular/language-service": "^11.2.3",
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^12.11.1",
     "archiver": "^0.12.0",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "codelyzer": "~3.0.1",
+    "codelyzer": "^6.0.0",
     "compression": "^1.6.2",
     "detect-browser": "^1.7.0",
     "grunt": "^0.4.5",
@@ -83,17 +87,17 @@
     "gulp-typescript": "2.13.6",
     "imagemin-optipng": "^4.3.0",
     "imagemin-svgo": "^5.2.2",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.1.1",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "karma-remap-istanbul": "^0.2.1",
     "matchdep": "*",
-    "protractor": "~5.1.2",
+    "protractor": "~7.0.0",
     "require": "^2.4.20",
     "rimraf": "^2.5.2",
     "rollup": "^0.45.1",
@@ -108,8 +112,8 @@
     "systemjs": "0.19.29",
     "systemjs-builder": "^0.15.16",
     "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "^2.4.2",
+    "tslint": "~6.1.0",
+    "typescript": "^4.1.5",
     "webdriver-manager": "10.2.5"
   }
 }
