--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -44,7 +44,7 @@
       {
         "translation_key": "open_hours.week_day1",
         "from": "8:00",
-        "to": "18:00",
+        "to": "21:00",
         "description": "monday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -62,15 +62,15 @@
       {
         "translation_key": "open_hours.week_day3",
         "from": "8:00",
-        "to": "18:00",
+        "to": "23:00",
         "description": "wednesday",
         "display_from": "8:00",
-        "display_to": "18:00",
+        "display_to": "21:00",
         "show": "true"
       },
       {
         "translation_key": "open_hours.week_day4",
-        "from": "8:00",
+        "from": "0:00",
         "to": "18:00",
         "description": "thursday",
         "display_from": "8:00",
@@ -160,7 +160,7 @@
     "description": "Define how many times should retry the queue poll request."
   },
   "block_other_browsers": {
-    "value": "disable",
+    "value": "enable",
     "description": "Enable or disable whether user allow to use/open the ticket in other devices apart from the created device. 'on = enable', 'off = disable'"
   },
   "otp_service": {
