--- a/tsconfig-aot.json
+++ b/tsconfig-aot.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "es2015",
+    "module": "esnext",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "outDir": "aot",
-    "lib": ["es2015", "dom"],
+    "lib": ["es2017", "dom"],
+    "skipLibCheck": true,
     "noImplicitAny": false,
     "removeComments": true,
     "suppressImplicitAnyIndexErrors": true
