MOB-309: updated angular version to v11

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/app"
             ],
             "allowedCommonJsDependencies": [
-              "lodash"
+              "lodash","fingerprintjs2"
+              
   
           ],
             "styles": [
