--- a/package.json
+++ b/package.json
@@ -12,108 +12,97 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.3",
-    "@angular/common": "^11.2.3",
-    "@angular/compiler": "^11.2.3",
-    "@angular/core": "^11.2.3",
-    "@angular/forms": "^11.2.3",
-    "@angular/platform-browser": "^11.2.3",
-    "@angular/platform-browser-dynamic": "^11.2.3",
-    "@angular/platform-server": "^11.2.3",
-    "@angular/router": "^11.2.3",
+    "@angular/animations": "^11.2.4",
+    "@angular/common": "^11.2.4",
+    "@angular/compiler": "^11.2.4",
+    "@angular/core": "^11.2.4",
+    "@angular/forms": "^11.2.4",
+    "@angular/platform-browser": "^11.2.4",
+    "@angular/platform-browser-dynamic": "^11.2.4",
+    "@angular/platform-server": "^11.2.4",
+    "@angular/router": "^11.2.4",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "core-js": "^2.5.0",
     "dont-sniff-mimetype": "^1.1.0",
-    "express-http-proxy": "^1.6.0",
-    "express-static-gzip": "^2.0.8",
-    "fingerprintjs2": "2.0.3",
+    "express-http-proxy": "^1.6.2",
+    "express-static-gzip": "^2.1.1",
+    "fingerprintjs2": "2.1.4",
     "frameguard": "^3.1.0",
     "grunt-cli": "^1.2.0",
     "hide-powered-by": "^1.1.0",
-    "imagemin-optipng": "^5.2.1",
-    "intl-tel-input": "^17.0.11",
+    "imagemin-optipng": "^8.0.0",
+    "intl-tel-input": "^17.0.12",
     "lodash-es": "^4.17.21",
     "ng2-bootstrap": "^1.1.16",
     "ng2-tel-input": "^2.3.0",
     "nocache": "^2.1.0",
     "rxjs": "^6.6.6",
-    "rxjs-compat": "^6.0.0-rc.0",
+    "rxjs-compat": "^6.6.6",
     "tslib": "^2.0.0",
-    "ws": "^1.1.1",
+    "ws": "^7.4.4",
     "x-xss-protection": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.2",
-    "@angular/cli": "^11.2.2",
-    "@angular/compiler-cli": "^11.2.3",
-    "@angular/language-service": "^11.2.3",
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "^0.1102.3",
+    "@angular/cli": "^11.2.3",
+    "@angular/compiler-cli": "^11.2.4",
+    "@angular/language-service": "^11.2.4",
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@types/jasmine": "^3.6.6",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^12.11.1",
-    "archiver": "^0.12.0",
+    "@types/node": "^12.20.5",
     "babel-preset-es2015-rollup": "^3.0.0",
     "codelyzer": "^6.0.0",
     "compression": "^1.6.2",
-    "detect-browser": "^1.7.0",
-    "grunt": "^0.4.5",
-    "grunt-angular-builder": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compress": "^1.4.3",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-htmlmin": "^0.5.0",
-    "grunt-contrib-imagemin": "^2.0.1",
-    "grunt-contrib-jshint": "*",
-    "grunt-contrib-qunit": "*",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-image": "^2.4.0",
-    "grunt-karma": "^0.12.1",
+    "detect-browser": "^5.2.0",
+    "grunt": "^1.3.0",
+    "grunt-angular-builder": "^2.0.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-compress": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^4.0.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-qunit": "^4.0.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-image": "^6.4.0",
+    "grunt-karma": "^4.0.0",
     "grunt-properties-reader": "^0.1.3",
-    "grunt-replace": "^0.11.0",
-    "grunt-shell": "^1.3.1",
+    "grunt-replace": "^2.0.1",
+    "grunt-shell": "^3.0.1",
     "grunt-ssh": "^0.12.9",
     "grunt-string-replace": "^1.3.1",
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-war": "^0.5.1",
-    "grunt-zip": "0.17.1",
+    "grunt-zip": "0.18.2",
     "gulp": "^3.9.1",
     "gulp-inline-ng2-template": "2.0.1",
     "gulp-typescript": "2.13.6",
-    "imagemin-optipng": "^4.3.0",
-    "imagemin-svgo": "^5.2.2",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.1",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "^6.1.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "~1.0.1",
+    "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "karma-remap-istanbul": "^0.2.1",
+    "karma-remap-istanbul": "^0.6.0",
     "matchdep": "*",
     "protractor": "~7.0.0",
     "require": "^2.4.20",
     "rimraf": "^2.5.2",
-    "rollup": "^0.45.1",
-    "rollup-plugin-alias": "^1.3.1",
-    "rollup-plugin-angular": "^0.4.4",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-typescript": "^0.8.1",
-    "rollup-plugin-uglify": "^2.0.1",
-    "systemjs": "0.19.29",
-    "systemjs-builder": "^0.15.16",
     "ts-node": "~3.0.4",
     "tslint": "~6.1.0",
     "typescript": "^4.1.5",
-    "webdriver-manager": "10.2.5"
+    "webdriver-manager": "12.1.8"
   }
 }
