--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -9,7 +9,7 @@
     "mapRoot": "./",
     "module": "esnext",
     "moduleResolution": "node",
-    "outDir": "../dist/out-tsc",
+    "outDir": "../aot",
     "sourceMap": true,
     "target": "es5",
     "typeRoots": [
