--- a/node/package.json
+++ b/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile-ticket-server",
-  "version": "1.13.1",
+  "version": "1.13.2-Internal",
   "description": "Server Application for MT",
   "main": "server.js",
   "dependencies": {
