--- a/package.json
+++ b/package.json
@@ -23,19 +23,23 @@
     "@angular/router": "^11.2.4",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@schematics/angular": "^9.1.0",
+    "bootstrap": "4.1.1",
     "core-js": "^2.5.0",
     "dont-sniff-mimetype": "^1.1.0",
     "express-http-proxy": "^1.6.2",
     "express-static-gzip": "^2.1.1",
     "fingerprintjs2": "2.1.4",
     "frameguard": "^3.1.0",
+    "google-libphonenumber": "^3.2.19",
     "grunt-cli": "^1.2.0",
     "hide-powered-by": "^1.1.0",
     "imagemin-optipng": "^8.0.0",
-    "intl-tel-input": "^17.0.12",
     "lodash-es": "^4.17.21",
     "ng2-bootstrap": "^1.1.16",
     "ng2-tel-input": "^2.3.0",
+    "ngx-bootstrap": "^6.2.0",
+    "ngx-intl-tel-input": "^3.1.1",
     "nocache": "^2.1.0",
     "rxjs": "^6.6.6",
     "rxjs-compat": "^6.6.6",
