--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -75,7 +75,7 @@
       {
         "translation_key": "open_hours.week_day4",
         "from": "8:00",
-        "to": "18:59",
+        "to": "18:00",
         "description": "thursday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -143,7 +143,7 @@
     "value": {
       "phone_number": {
         "value": "disable",
-        "description": "Enable or disable customer phone number field in customer data section, 'enable => phone number feild is visible but not mandatory', 'disable => phone number feild is not visible' , 'mandatory => phone number feild is visible and mandatory'"
+        "description": "Enable or disable customer phone number field in customer data section, 'enable => phone number field is visible but not mandatory', 'disable => phone number field is not visible' , 'mandatory => phone number field is visible and mandatory'"
       },
       "customerId": {
         "value": "disable",
