--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile-ticket",
-  "version": "1.13.1",
+  "version": "1.13.2-Internal",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
