--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,14 +1,14 @@
 {
   "/MobileTicket/*": {
-    "target": "http://192.168.1.100:9090",
-    "secure": true
+    "target": "http://localhost:9090",
+    "secure": false
   },
   "/geo/*": {
-    "target": "http://192.168.1.100:9090",
-    "secure": true
+    "target": "http://localhost:9090",
+    "secure": false
   },
   "/MTService/*": {
     "target": "http://localhost:81",
-    "secure": true
+    "secure": false
   }
 }
