--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -171,7 +171,7 @@
         "description": "Define delay time slots (minutes)"
       }
     },
-    "description": "Enable or disable whether customer need to create or update visit with delay"
+    "description": "Enable or disable or define a time when customer need to create or update visit with delay"
   },
   "privacy_policy": {
     "value": "disable",
