MOB-720: Security improvements related to appointment id

--- a/node/package.json
+++ b/node/package.json
@@ -4,10 +4,12 @@
   "description": "Server Application for MT",
   "main": "server.js",
   "dependencies": {
+    "@types/crypto-js": "^4.0.2",
     "@types/mongoose": "^5.7.36",
     "axios": "^0.19.0",
     "body-parser": "1.17.2",
     "compression": "1.6.2",
+    "crypto-js": "^4.1.1",
     "express": "^4.17.1",
     "express-http-proxy": "1.6.0",
     "express-static-gzip": "2.0.6",
