--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@schematics/angular": "^9.1.0",
+    "@types/crypto-js": "^4.0.2",
     "bootstrap": "4.1.1",
     "core-js": "^2.5.0",
+    "crypto-js": "^4.1.1",
     "dont-sniff-mimetype": "^1.1.0",
     "express-http-proxy": "^1.6.2",
     "express-static-gzip": "^2.1.1",
