--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,10 +1,10 @@
 {
   "/MobileTicket/*": {
-    "target": "http://localhost:9090",
+    "target": "http://192.168.1.100:9090",
     "secure": false
   },
   "/geo/*": {
-    "target": "http://localhost:9090",
+    "target": "http://192.168.1.100:9090",
     "secure": false
   },
   "/MTService/*": {
