0000000: release note updates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile-ticket",
-  "version": "1.15.0-Internal",
+  "version": "1.15.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
