--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -12,7 +12,7 @@
     "description": "Enable or disable geofencing on landing pages, 'on = enable', 'off = disable'. geofencing will only work on https protocol. if geofencing disabled, branch radius and appointment radius will be discarded"
   },
   "version": {
-    "value": "1.15.0",
+    "value": "1.16.0",
     "description": "MobileTicket version [depreciated key. version in package.json and release notes instead]"
   },
   "customer_feedback": {
@@ -156,6 +156,10 @@
       "customerId": {
         "value": "disable",
         "description": "Enable or disable customer id field in customer data section, 'on = enable', 'off = disable'"
+      },
+      "additional_data": {
+        "value": "",
+        "description": "Enable or disable additonal customer data on QR scanning URL, set a value that is using in query parameter"
       }
     },
     "description": "Enable or disable customer id or phone number in customer area. If both are disabled customer data section will be hidden"
