--- a/node/proxy-config.json
+++ b/node/proxy-config.json
@@ -1,6 +1,6 @@
 {
   "apigw_ip_port": {
-    "value": "10.2.3.88:9090",
+    "value": "localhost:9090",
     "description": "API Gateway - host address"
   },
   "local_webserver_port": {
@@ -8,7 +8,7 @@
     "description": "Local webserver port"
   },
   "auth_token": {
-    "value": "nosecrets",
+    "value": "7e7f823d-5f71-4f3b-bb71-d06cf56869c3",
     "description": "Mobile API user - authentication token"
   },
   "local_webserver_ssl_port": {
@@ -16,15 +16,15 @@
     "description": "Local webserver HTTPS port"
   },
   "support_ssl": {
-    "value": "true",
+    "value": "false",
     "description": "Flag indicating server supports SSL.Should have a valid public key and certificate in 'sslcert' folder "
   },
   "gateway_has_certificate": {
-    "value": "true",
+    "value": "false",
     "description": "Flag indicating the API gateway is configured to run on HTTPS"
   },
   "gateway_certificate_is_valid": {
-    "value": "true",
+    "value": "false",
     "description": "Flag indicating the configured SSL certificate in the API gateway is a valid. This setting is active only if 'gateway_has_certificate' is true. This must be set to 'false' if API gateway is configured with a self signed certificate "
   },
   "embed_iFrame": {
